@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-21T00:52:39Z",
-  "count_outdated" : 288,
-  "uniques_outdated" : 254,
+  "timestamp" : "2025-12-23T00:48:05Z",
+  "count_outdated" : 289,
+  "uniques_outdated" : 255,
   "count" : 292,
   "uniques" : 258,
   "clones" : [
-    {
-      "timestamp": "2025-12-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-12-09T00:00:00Z",
       "count": 1,
