@@ -1,3 +1,12 @@
+2025-12-23T00:48:05Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20448020863 # 847
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-23
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 254 288 / 258 292
+* notice: next accum: outdated-unq outdated-all / unq all: 255 289 / 258 292
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-12-08] / []
+
 2025-12-21T00:52:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20402417548 # 845
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-21
